Разметка index и hotels
Разметка шапки, 2-х секций и подвала для index

Разметка шапки, карточек гостиниц и подвала для hotels

--- a/index.html
+++ b/index.html
@@ -5,8 +5,58 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
+    <header>
+      <a href=""><img class="logo" src="#" alt="Логотип"></a>
+      <nav class="main-nav">
+        <ul>
+          <li><a href="">Информация</a></li>
+          <li><a href="">Фото и видео</a></li>
+          <li><a href="">Карта штата</a></li>
+          <li><a href="hotels.html">Гостиницы</a></li>
+        </ul>
+      </nav>
+    </header>
+    
+    <main>
+      <!-- Вступительный блок -->
+      <section class="intro">
+        <h1>Седона</h1>
+        <p>Welcome</p>
+        <p>to the gorgeous</p>
+        <p>Sedona</p>
+        <p>"Because the Grand Canyon sucks!"</p>
+      </section>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+      <section class="features">
+        <h2>Причины посетить Седону</h2>
+        <p>Седона - небольшой городок в Аризоне, заслуживающий большего!</p>
+        <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+        <!-- Здесь будет описание причин -->
+      </section>
+
+      <section class="interest">
+        <h2>Заинтересовались?</h2>
+        <p>Укажите предполагаемые даты поездки, 
+          и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <button>Поиск гостиницы в Седоне</button>
+      <!-- Здесь будет форма поиска гостиницы -->
+      </section>
+    </main>
+    
+    <footer>
+      <p class="visit-sedona">#visitsedona</p>
+      <div class="social">
+        <ul class="social-btn">
+          <li><a href="">Twitter</a></li>
+          <li><a href="">Facebook</a></li>
+          <li><a href="">YouTube</a></li>
+        </ul>
+      </div>
+      <div class="copyright">
+        <p>Website by</p>
+        <span><a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a></span>
+      </div>
+    </footer>
 
   </body>
 </html>
