--- a/hotels.html
+++ b/hotels.html
@@ -7,12 +7,12 @@
 	<body>
 
 		<header>
-			<a href="index.html"><img class="logo" src="#" alt="Логотип"></a>
+			<a href="index.html" title="На главную"><img class="logo" src="img\logo-sedona.svg" alt="Логотип" width="140px" height="71px"></a>
 			<nav class="main-nav">
 				<ul>
-					<li><a href="">Информация</a></li>
-					<li><a href="">Фото и видео</a></li>
-					<li><a href="">Карта штата</a></li>
+					<li><a href="#">Информация</a></li>
+					<li><a href="#">Фото и видео</a></li>
+					<li><a href="#">Карта штата</a></li>
 					<li><a href="#">Гостиницы</a></li>
 				</ul>
 			</nav>
@@ -31,57 +31,70 @@
 				<ul>
 					<li>
 						<h3>Amara Resort & SPA</h3>
-						<img src="#" alt="Фото гостиницы">
+						<img src="img\hotel-picture_amara.jpg" alt="Фото гостиницы" width="135px" height="90px">
 						<p>Гостиница</p>
 						<p>от 4000 р.</p>
 						<div class="hotel-rating">
 							<span class="stars">4 звезды</span>
 							<p>Рейтинг: 8.5</p>
 						</div>	
-						<a href="">Подробнее</a>
-						<a href="">Забронировать</a>
+						<a href="#">Подробнее</a>
+						<a href="#">Забронировать</a>
 					</li>
 					<li>
 						<h3>Desert Quail Inn</h3>
-						<img src="#" alt="Фото гостиницы">
+						<img src="img\hotel-picture_desert.jpg" alt="Фото гостиницы" width="135px" height="90px">
 						<p>Мотель</p>
 						<p>от 3000 р.</p>
 						<div class="hotel-rating">
 							<span class="stars">3 звезды</span>
 							<p>Рейтинг: 8.9</p>
 						</div>
-						<a href="">Подробнее</a>
-						<a href="">Забронировать</a>
+						<a href="#">Подробнее</a>
+						<a href="#">Забронировать</a>
 					</li>
 					<h3>Desert Quail Inn</h3>
-						<img src="#" alt="Фото гостиницы">
+						<img src="img\hotel-picture_villas.jpg" alt="Фото гостиницы" width="135px" height="90px">
 						<p>Мотель</p>
 						<p>от 3000 р.</p>
-						<div class="hotel-rating>
-							<span class="stars">2 звезды</span>
+						<div class="hotel-rating">
+							<span class="stars"></div>2 звезды</span>
 							<p>Рейтинг: 8.9</p>
 						</div>
-						<a href="">Подробнее</a>
-						<a href="">Забронировать</a>
+						<a href="#">Подробнее</a>
+						<a href="#">Забронировать</a>
 				</ul>
 			</section>
 		</main>
 
 		<footer>
-			<p class="visit-sedona">#visitsedona</p>
-			<div class="social">
-				<ul class="social-btn">
-					<li><a href="">Twitter</a></li>
-					<li><a href="">Facebook</a></li>
-					<li><a href="">YouTube</a></li>
-				</ul>
-			</div>
-			<div class="copyright">
-				<p>Website by</p>
-				<span><a href="https://htmlacademy.ru/intensive/htmlcss">HTML
-						Academy</a></span>
-			</div>
-		</footer>
+				<p class="visit-sedona">#visitsedona</p>
+				<div class="social">
+					<ul class="social-btn">
+						<li class="twitter">
+							<a href="#" title="Наш Twitter">
+								<img src="img\twitter.svg" alt="Twitter">
+							</a>
+						</li>
+						<li class="facebook">
+							<a href="#" title="Наш Facebook">
+								<img src="img\fb-icon.svg" alt="Facebook">
+							</a>
+						</li>
+						<li class="youtube">
+							<a href="#" title="Наш YouTube">
+								<img src="img\youtube.svg" alt="YouTube">
+							</a>
+						</li>
+					</ul>
+				</div>
+				<div class="copyright">
+					<p>Website by</p>
+					<a class="copyright-logo" href="https://htmlacademy.ru/intensive/htmlcss" title="Интенсив HTML и CSS, уровень 1">
+						<img src="img\logo-htmlacademy.svg" alt="HTML Academy" width="115px" height="41px">
+					</a>
+				</div>
+			</footer>
 
 	</body>
 </html>	
