--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   </head>
   <body>
     <header>
-      <a href=""><img class="logo" src="#" alt="Логотип"></a>
+      <a><img class="logo" src="img\logo-sedona.svg" alt="Логотип" width="140px" height="71px"></a>
       <nav class="main-nav">
         <ul>
-          <li><a href="">Информация</a></li>
-          <li><a href="">Фото и видео</a></li>
-          <li><a href="">Карта штата</a></li>
+          <li><a href="#">Информация</a></li>
+          <li><a href="#">Фото и видео</a></li>
+          <li><a href="#">Карта штата</a></li>
           <li><a href="hotels.html">Гостиницы</a></li>
         </ul>
       </nav>
@@ -20,43 +20,115 @@
     <main>
       <!-- Вступительный блок -->
       <section class="intro">
-        <h1>Седона</h1>
-        <p>Welcome</p>
-        <p>to the gorgeous</p>
-        <p>Sedona</p>
-        <p>"Because the Grand Canyon sucks!"</p>
+        <h1>Добро пожаловать в Седону</h1>
+        <!-- Текст будет частью фона -->
       </section>
 
+      <!-- Блок с фичами -->
       <section class="features">
         <h2>Причины посетить Седону</h2>
         <p>Седона - небольшой городок в Аризоне, заслуживающий большего!</p>
         <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
-        <!-- Здесь будет описание причин -->
+        <ul class="features-list">
+          <li>
+            <h3>Настоящий
+              <br> 
+              городок</h3>
+            <p>— №1 —</p>
+            <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+          </li>
+          <li>
+            <h3>Жильё</h3>
+            <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+          </li>
+          <li>
+            <h3>Еда</h3>
+            <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+          </li>
+          <li>
+            <h3>Сувениры</h3>
+            <p>Не только китайского, но и местного производства!</p>
+          </li>
+          <li>
+            <h3>Там есть
+              <br>
+              Мост дьявола
+            </h3>
+            <p>— №2 —</p>
+            <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+          </li>
+          <li>
+            <h3>Небольшая
+              <br>
+              площадь
+            </h3>  
+            <p>— №3 —</p>
+            <p>Все достопримечательности находятся очень близко</p>  
+          </li>
+          <li>
+            <h3>Красивая
+              <br>
+              дорога
+            </h3>
+            <p>— №4 —</p>
+            <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </li>
+          <li>
+            <h3>
+              Мало
+              <br>
+              туристов
+            </h3>
+            <p>— №5 —</p>
+            <p>Большинство едет в гранд каньон и толпится там</p>
+          </li>
+        </ul>
       </section>
 
+      <!-- Блок поиска гостиницы -->
       <section class="interest">
         <h2>Заинтересовались?</h2>
         <p>Укажите предполагаемые даты поездки, 
           и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <button>Поиск гостиницы в Седоне</button>
-      <!-- Здесь будет форма поиска гостиницы -->
+        <!-- Здесь будет форма поиска гостиницы -->
       </section>
+
+      <!-- Блок с картой -->
+      <section class="map">
+        <!-- Здесь будет карта (может даже интерактивная) -->
+      </section>
+
     </main>
     
     <footer>
-      <p class="visit-sedona">#visitsedona</p>
-      <div class="social">
-        <ul class="social-btn">
-          <li><a href="">Twitter</a></li>
-          <li><a href="">Facebook</a></li>
-          <li><a href="">YouTube</a></li>
-        </ul>
-      </div>
-      <div class="copyright">
-        <p>Website by</p>
-        <span><a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a></span>
-      </div>
-    </footer>
+			<p class="visit-sedona">#visitsedona</p>
+			<div class="social">
+				<ul class="social-btn">
+					<li class="twitter">
+            <a href="#" title="Наш Twitter">
+              <img src="img\twitter.svg" alt="Twitter">
+            </a>
+          </li>
+          <li class="facebook">
+            <a href="#" title="Наш Facebook">
+              <img src="img\fb-icon.svg" alt="Facebook">
+            </a>
+          </li>
+          <li class="youtube">
+            <a href="#" title="Наш YouTube">
+              <img src="img\youtube.svg" alt="YouTube">
+            </a>
+          </li>
+				</ul>
+			</div>
+			<div class="copyright">
+				<p>Website by</p>
+        <a class="copyright-logo" href="https://htmlacademy.ru/intensive/htmlcss" title="Интенсив HTML и CSS, уровень 1">
+          <img src="img\logo-htmlacademy.svg" alt="HTML Academy" width="115px" height="41px">
+        </a>
+			</div>
+		</footer>
 
   </body>
 </html>
