--- a/hotels.html
+++ b/hotels.html
@@ -3,11 +3,12 @@
 	<head>
 		<meta charset="utf-8">
 		<title>HTML Academy: Седона</title>
+		<link rel="stylesheet" href="css\style.css">
 	</head>
 	<body>
 
 		<header>
-			<a href="index.html" title="На главную"><img class="logo" src="img\logo-sedona.svg" alt="Логотип" width="140px" height="71px"></a>
+			<a href="index.html" title="На главную"><img class="logo" src="img\logo-sedona.svg" alt="Логотип" width="140" height="71"></a>
 			<nav class="main-nav">
 				<ul>
 					<li><a href="#">Информация</a></li>
@@ -19,19 +20,67 @@
 		</header>
 
 		<main>
-			<h1>Гостиницы</h1>
+			<h1 class="visually-hidden">Гостиницы</h1>
 			<section class="hotel-filter">
-				<h2>Фильтр гостиниц</h2>
-				<!-- Здесь будет фильтр -->
+				<h2 class="visually-hidden">Фильтр гостиниц</h2>
+				<form action="https://echo.htmlacademy.ru" method="POST">
+					<h3>Инфраструктура:</h3>
+					<ul>
+						<li>
+							<label>
+								<input type="checkbox" name="checkbox-pool" checked>
+						Бассейн
+							</label>
+						</li>
+						<li>
+							<label>
+								<input type="checkbox" name="checkbox-parking">
+								Парковка
+							</label>
+						</li>
+						<li>
+							<label>
+								<input type="checkbox" name="checkbox-wifi">
+								Wi-Fi
+							</label>
+						</li>
+					</ul>
+					<h3>Тип жилья:</h3>
+					<ul>
+						<li>
+							<label>
+								<input type="checkbox" name="checkbox-hotel" checked>
+						Гостиница
+							</label>
+						</li>
+						<li>
+							<label>
+								<input type="checkbox" name="checkbox-motel" checked>
+								Мотель
+							</label>
+						</li>
+						<li>
+							<label>
+								<input type="checkbox" name="checkbox-apart" checked>
+								Апартаменты
+							</label>
+						</li>
+					</ul>
+					
+					<!-- Слайдер с окнами -->
+					<h3>Стоимость в сутки (Р):</h3>
+
+					<button type="submit">Показать</button>
+				</form>
 			</section>
 
 			<!-- Карточки гостиниц -->
 			<section class="hotels">
-				<h2>Список гостиниц</h2>
+				<h2 class="visually-hidden">Список гостиниц</h2>
 				<ul>
 					<li>
 						<h3>Amara Resort & SPA</h3>
-						<img src="img\hotel-picture_amara.jpg" alt="Фото гостиницы" width="135px" height="90px">
+						<img src="img\hotel-picture_amara.jpg" alt="Фото гостиницы" width="135" height="90">
 						<p>Гостиница</p>
 						<p>от 4000 р.</p>
 						<div class="hotel-rating">
@@ -43,7 +92,7 @@
 					</li>
 					<li>
 						<h3>Desert Quail Inn</h3>
-						<img src="img\hotel-picture_desert.jpg" alt="Фото гостиницы" width="135px" height="90px">
+						<img src="img\hotel-picture_desert.jpg" alt="Фото гостиницы" width="135" height="90">
 						<p>Мотель</p>
 						<p>от 3000 р.</p>
 						<div class="hotel-rating">
@@ -54,7 +103,7 @@
 						<a href="#">Забронировать</a>
 					</li>
 					<h3>Desert Quail Inn</h3>
-						<img src="img\hotel-picture_villas.jpg" alt="Фото гостиницы" width="135px" height="90px">
+						<img src="img\hotel-picture_villas.jpg" alt="Фото гостиницы" width="135" height="90">
 						<p>Мотель</p>
 						<p>от 3000 р.</p>
 						<div class="hotel-rating">
@@ -91,7 +140,7 @@
 				<div class="copyright">
 					<p>Website by</p>
 					<a class="copyright-logo" href="https://htmlacademy.ru/intensive/htmlcss" title="Интенсив HTML и CSS, уровень 1">
-						<img src="img\logo-htmlacademy.svg" alt="HTML Academy" width="115px" height="41px">
+						<img src="img\logo-htmlacademy.svg" alt="HTML Academy" width="115" height="41">
 					</a>
 				</div>
 			</footer>
