--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                   </button>
                   <input type="text" name="child-count" id="child-count" value="0">
                   <button type="button" class="more">
-                    <svg width="11" height="11" viewBox="0 0 11 11" fill="none" xmlns="http://www.w3.org/2000/svg"
+                    <svg width="11" height="11" viewBox="0 0 11 11" fill="#black" xmlns="http://www.w3.org/2000/svg"
                       xmlns:xlink="http://www.w3.org/1999/xlink">
                       <rect width="11" height="11" fill="url(#pattern0)" />
                       <defs>
