--- a/index.html
+++ b/index.html
@@ -131,25 +131,17 @@
               <div class="counter-container">
                 <label for="adult-count">Взрослые:</label>
                 <div class="input-container">
-                  <button type="button" class="less">
-                    <span class="less-icon">–</span>
-                  </button>
+                  <button type="button" class="less">–</button>
                   <input type="text" name="adult-count" id="adult-count" value="2">
-                  <button type="button" class="more">
-                    <span class="more-icon">+</span>
-                  </button>
+                  <button type="button" class="more">+</button>
                 </div>
               </div>
               <div class="counter-container">
                 <label for="child-count">Дети:</label>
                 <div class="input-container">
-                  <button type="button" class="less">
-                    <span class="less-icon">–</span>
-                  </button>
+                  <button type="button" class="less">–</button>
                   <input type="text" name="child-count" id="child-count" value="0">
-                  <button type="button" class="more">
-                    <span class="more-icon">+</span>
-                  </button>
+                  <button type="button" class="more">+</button>
                 </div>
               </div>
             </div>
