--- a/hotels.html
+++ b/hotels.html
@@ -32,34 +32,34 @@
 						<form class="filter-form" action="https://echo.htmlacademy.ru" method="POST">
 							<div class="checkbox infrastructure">
 								<legend>Инфраструктура:</legend>
-								<ul>
-									<li>
-										<input type="checkbox" name="checkbox-pool" id="pool" checked>
+								<ul class="checkbox-list">
+									<li class="checkbox-list-item">
+										<input class="checkbox-input" type="checkbox" name="checkbox-pool" id="pool" checked>
 										<label for="pool">Бассейн</label>
 									</li>
-									<li>
-										<input type="checkbox" name="checkbox-parking" id="parking">
+									<li class="checkbox-list-item">
+										<input class="checkbox-input" type="checkbox" name="checkbox-parking" id="parking">
 										<label for="parking">Парковка</label>
 									</li>
-									<li>
-										<input type="checkbox" name="checkbox-wifi" id="wifi">
+									<li class="checkbox-list-item">
+										<input class="checkbox-input" type="checkbox" name="checkbox-wifi" id="wifi">
 										<label for="wifi">Wi-Fi</label>
 									</li>
 								</ul>
 							</div>
 							<div class="checkbox housing">
 								<legend>Тип жилья:</legend>
-								<ul>
-									<li>
-										<input type="checkbox" name="checkbox-hotel" id="hotel" checked>
+								<ul class="checkbox-list">
+									<li class="checkbox-list-item">
+										<input class="checkbox-input" type="checkbox" name="checkbox-hotel" id="hotel" checked>
 										<label for="hotel">Гостиница</label>
 									</li>
-									<li>
-										<input type="checkbox" name="checkbox-motel" id="motel" checked>
+									<li class="checkbox-list-item">
+										<input class="checkbox-input" type="checkbox" name="checkbox-motel" id="motel" checked>
 										<label for="motel">Мотель</label>
 									</li>
-									<li>
-										<input type="checkbox" name="checkbox-apart" id="apartment" checked>
+									<li class="checkbox-list-item">
+										<input class="checkbox-input" type="checkbox" name="checkbox-apart" id="apartment" checked>
 										<label for="apartment">Апартаменты</label>
 									</li>
 								</ul>
