--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
 <body>
   <div class="gray-back">
     <div class="site-wrapper">
+    
       <header>
         <nav class="main-nav">
           <a><img class="logo" src="img/logo-sedona.svg" alt="Логотип" width="140" height="71"></a>
           <ul class="main-menu">
-            <li><a href="#">Информация</a></li>
-            <li><a href="#">Фото и видео</a></li>
-            <li><a href="#">Карта штата</a></li>
-            <li><a href="hotels.html">Гостиницы</a></li>
+            <li class="menu-item"><a href="#">Информация</a></li>
+            <li class="menu-item"><a href="#">Фото и видео</a></li>
+            <li class="menu-item"><a href="#">Карта штата</a></li>
+            <li class="menu-item"><a href="hotels.html">Гостиницы</a></li>
           </ul>
         </nav>
       </header>
@@ -30,7 +31,7 @@
         <div class="intro">
           <img src="img/intro-welcome.svg" alt="Седона лучше, чем Гранд Каньон" width="459" height="353">
         </div>
-
+     
         <!-- Блок с фичами -->
         <section class="features">
           <h2 class="visually-hidden">Причины посетить Седону</h2>
@@ -39,7 +40,7 @@
             <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
           </div>
           <ol class="features-list">
-            <li class="numbered">
+            <li class="numbered first">
               <div class="city">
                 <h3>Настоящий городок</h3>
                 <span>— №1 —</span>
@@ -47,21 +48,23 @@
               </div>
               <div class="background"></div>
             </li>
-            <ul class="not-numbered">
-              <li>
-                <h3 class="life">Жильё</h3>
-                <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-              </li>
-              <li>
-                <h3 class="food">Еда</h3>
-                <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-              </li>
-              <li>
-                <h3 class="souvenirs">Сувениры</h3>
-                <p>Не только китайского, но и местного производства!</p>
-              </li>
-            </ul>
-            <li class="numbered">
+            <li class="not-numbered">
+              <ul class="not-numbered-list">
+                <li>
+                  <h3 class="life">Жильё</h3>
+                  <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+                </li>
+                <li>
+                  <h3 class="food">Еда</h3>
+                  <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+                </li>
+                <li>
+                  <h3 class="souvenirs">Сувениры</h3>
+                  <p>Не только китайского, но и местного производства!</p>
+                </li>
+              </ul>
+            <li>
+            <li class="numbered second">
               <div class="bridge">
                 <h3>Там есть Мост дьявола</h3>
                 <span>— №2 —</span>
