--- a/hotels.html
+++ b/hotels.html
@@ -17,10 +17,10 @@
 					<nav class="main-nav">
 						<a href="index.html" title="На главную"><img class="logo" src="img/logo-sedona.svg" alt="Логотип" width="140" height="71"></a>
 						<ul class="main-menu">
-							<li><a href="#">Информация</a></li>
-							<li><a href="#">Фото и видео</a></li>
-							<li><a href="#">Карта штата</a></li>
-							<li><a class="current">Гостиницы</a></li>
+							<li class="menu-item"><a href="#">Информация</a></li>
+							<li class="menu-item"><a href="#">Фото и видео</a></li>
+							<li class="menu-item"><a href="#">Карта штата</a></li>
+							<li class="menu-item"><a class="current">Гостиницы</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -31,7 +31,7 @@
 						<h2 class="visually-hidden">Фильтр гостиниц</h2>
 						<form class="filter-form" action="https://echo.htmlacademy.ru" method="POST">
 							<div class="checkbox infrastructure">
-								<legend>Инфраструктура:</legend>
+								<span class="legend">Инфраструктура:</span>
 								<ul class="checkbox-list">
 									<li class="checkbox-list-item">
 										<input class="checkbox-input" type="checkbox" name="checkbox-pool" id="pool" checked>
@@ -48,7 +48,7 @@
 								</ul>
 							</div>
 							<div class="checkbox housing">
-								<legend>Тип жилья:</legend>
+								<span class="legend">Тип жилья:</span>
 								<ul class="checkbox-list">
 									<li class="checkbox-list-item">
 										<input class="checkbox-input" type="checkbox" name="checkbox-hotel" id="hotel" checked>
@@ -67,7 +67,7 @@
 							
 							<!-- Слайдер с окнами -->
 							<div class="price-filter">
-								<b>Стоимость в сутки (р):</b>
+								<span class="legend">Стоимость в сутки (р):</span>
 								<div class="price-input">
 									<label class="min-price">
 										от 
@@ -78,7 +78,7 @@
 										<input type="text" name="max-price" value="3000">
 									</label>
 								</div>
-								<div class="slider">
+								<div class="slider-input">
 									<span class="slider-btn range-min" tabindex="0" aria-label="Ползунок от">
 										<svg xmlns="http://www.w3.org/2000/svg" width="20" height="23" viewBox="0 0 20 23"><path opacity=".3" fill="#ABABAB" d="M10 20C4.477 20 0 15.522 0 10v2c0 5.522 4.477 10 10 10 5.522 0 10-4.478 10-10v-2c0 5.522-4.478 10-10 10z"/><circle fill="#FFF" cx="10" cy="10" r="10"/><circle fill="#ABABAB" cx="10" cy="10" r="2"/></svg>
 									</span>
@@ -99,9 +99,9 @@
 						<div class="search-results">
 							<b>Найдено: 3</b>
 							<div class="results-sort">
-								<legend>Сортировка:</legend>
+								<span class="legend">Сортировка:</span>
 								<ul class="sort-by">
-									<li><a class="active" href="#" class="sort">По цене</a></li>
+									<li><a class="active sort" href="#">По цене</a></li>
 									<li><a href="#" class="sort">По типу</a></li>
 									<li><a href="#" class="sort">По рейтингу</a></li>
 								</ul>
@@ -133,10 +133,10 @@
 								</div>
 								<div class="hotel-rating">
 									<span class="hotel-stars">4 звезды
-										<img src="img/star.svg" width="18" height="17">
-										<img src="img/star.svg" width="18" height="17">
-										<img src="img/star.svg" width="18" height="17">
-										<img src="img/star.svg" width="18" height="17">
+										<img src="img/star.svg" alt="Звездочка" width="18" height="17">
+										<img src="img/star.svg" alt="Звездочка" width="18" height="17">
+										<img src="img/star.svg" alt="Звездочка" width="18" height="17">
+										<img src="img/star.svg" alt="Звездочка" width="18" height="17">
 									</span>
 									<span class="hotel-score">Рейтинг: 8,5</span>
 								</div>	
@@ -147,15 +147,15 @@
 									<h3><a href="#">Desert Quail Inn</a></h3>
 									<p>Мотель <span class="price">от 3000 р.</span></p>
 									<div class="btn-container">
-										<a class="btn-more btn-blue"href="#">Подробнее</a>
+										<a class="btn-more btn-blue" href="#">Подробнее</a>
 										<a class="btn-book btn-brown" href="#">Забронировать</a>
 									</div>
 								</div>
 								<div class="hotel-rating">
 									<span class="hotel-stars">3 звезды
-										<img src="img/star.svg" width="18" height="17">
-										<img src="img/star.svg" width="18" height="17">
-										<img src="img/star.svg" width="18" height="17">
+										<img src="img/star.svg" alt="Звездочка" width="18" height="17">
+										<img src="img/star.svg" alt="Звездочка" width="18" height="17">
+										<img src="img/star.svg" alt="Звездочка" width="18" height="17">
 									</span>
 									<span class="hotel-score">Рейтинг: 8,9</span>
 								</div>
@@ -172,8 +172,8 @@
 								</div>
 								<div class="hotel-rating">
 									<span class="hotel-stars">2 звезды
-										<img src="img/star.svg" width="18" height="17">
-										<img src="img/star.svg" width="18" height="17">
+										<img src="img/star.svg" alt="Звездочка" width="18" height="17">
+										<img src="img/star.svg" alt="Звездочка" width="18" height="17">
 									</span>
 									<span class="hotel-score">Рейтинг: 9,2</span>
 								</div>
