--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <label for="adult-count">Взрослые:</label>
                 <div class="input-container">
                   <button type="button" class="less">–</button>
-                  <input type="text" name="adult-count" id="adult-count" value="2">
+                  <input class="input-small" type="text" name="adult-count" id="adult-count" value="2">
                   <button type="button" class="more">+</button>
                 </div>
               </div>
@@ -143,7 +143,7 @@
                 <label for="child-count">Дети:</label>
                 <div class="input-container">
                   <button type="button" class="less">–</button>
-                  <input type="text" name="child-count" id="child-count" value="0">
+                  <input  class="input-small" type="text" name="child-count" id="child-count" value="0">
                   <button type="button" class="more">+</button>
                 </div>
               </div>
