--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <section class="features">
           <h2 class="visually-hidden">Причины посетить Седону</h2>
           <div class="features-intro">
-            <p>Седона - небольшой городок в Аризоне, заслуживающий большего!</p>
+            <p>Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
             <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
           </div>
           <ol class="features-list">
