Правки для доступности
Добавил состояние фокуса интерактивным элементам

--- a/hotels.html
+++ b/hotels.html
@@ -123,7 +123,7 @@
 						<li class="hotel-list-item">
 							<img class="hotel-photo" src="img/hotel-picture-amara.jpg" alt="Фото гостиницы" width="135" height="90">
 							<div class="hotel-main">
-								<h3><a href="#">Amara Resort & SPA</a></h3>
+								<h3><a class="hotel-link" href="#">Amara Resort & SPA</a></h3>
 								<p>Гостиница <span class="price">от 4000 р.</span></p>
 								<div class="btn-container">
 									<a class="btn-more btn-blue" href="#">Подробнее</a>
@@ -143,7 +143,7 @@
 						<li class="hotel-list-item">
 							<img class="hotel-photo" src="img/hotel-picture-desert.jpg" alt="Фото гостиницы" width="135" height="90">
 							<div class="hotel-main">
-								<h3><a href="#">Desert Quail Inn</a></h3>
+								<h3><a class="hotel-link" href="#">Desert Quail Inn</a></h3>
 								<p>Мотель <span class="price">от 3000 р.</span></p>
 								<div class="btn-container">
 									<a class="btn-more btn-blue" href="#">Подробнее</a>
@@ -162,7 +162,7 @@
 						<li class="hotel-list-item">
 							<img class="hotel-photo" src="img/hotel-picture-villas.jpg" alt="Фото гостиницы" width="135" height="90">
 							<div class="hotel-main">
-								<h3><a href="#">Villas at Poco Diablo</a></h3>
+								<h3><a class="hotel-link" href="#">Villas at Poco Diablo</a></h3>
 								<p>Апартаменты <span class="price">от 2000 р.</span></p>
 								<div class="btn-container">
 									<a class="btn-more btn-blue" href="#">Подробнее</a>
