--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <span>— №1 —</span>
                 <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
               </div>
-              <div class="background"></div>
+              <img class="feature-picture-1" src="img/feature-picture-1.jpg" alt="Фотография города" width="800" height="256">
             </li>
             <li class="not-numbered">
               <ul class="not-numbered-list">
@@ -70,7 +70,7 @@
                 <span>— №2 —</span>
                 <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
               </div>
-              <div class="background"></div>
+              <img class="feature-picture-2" src="img/feature-picture-2.jpg" alt="Мост дьявола" width="800" height="256">
             </li>
             <li class="numbered gray">
               <h3>Небольшая площадь</h3>
@@ -92,14 +92,12 @@
 
         <!-- Блок поиска гостиницы -->
         <section class="hotel-search">
-          <div class="search-intro">
-            <h2 class="visually-hidden">Выбор гостиницы</h2>
-            <b>Заинтересовались?</b>
-            <p>Укажите предполагаемые даты поездки,
-                и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-            <button type="button" class="htl-search-btn btn-brown">Поиск гостиницы в Седоне</button>
-          </div>
-
+          <h2 class="visually-hidden">Выбор гостиницы</h2>
+          <b>Заинтересовались?</b>
+          <p>Укажите предполагаемые даты поездки,
+              и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <button type="button" class="htl-search-btn btn-brown">Поиск гостиницы в Седоне</button>
+        
           <!-- Попап форма -->
           <form class="hotel-form" action="https://echo.htmlacademy.ru" method="POST">
             <div class="line-container">
@@ -161,7 +159,7 @@
 
       <footer class="page-footer index">
 
-        <b class="footer-hashtag">#visitsedona</b>
+        <b class="footer-hashtag">#visitSEDONA</b>
         <ul class="social-btn">
           <li>
             <a href="#" title="Наш Twitter">
