--- a/index.html
+++ b/index.html
@@ -93,59 +93,51 @@
         <!-- Блок поиска гостиницы -->
         <section class="hotel-search">
           <h2 class="visually-hidden">Выбор гостиницы</h2>
-          <b>Заинтересовались?</b>
-          <p>Укажите предполагаемые даты поездки,
+          <b class="hotel-search-b">Заинтересовались?</b>
+          <p class="hotel-search-p">Укажите предполагаемые даты поездки,
               и мы покажем вам лучшие предложения гостиниц в Седоне</p>
           <button type="button" class="htl-search-btn btn-brown">Поиск гостиницы в Седоне</button>
         
           <!-- Попап форма -->
           <form class="hotel-form" action="https://echo.htmlacademy.ru" method="POST">
-            <div class="line-container">
+            <p class="form-line-container">
               <label for="arrival_date">Дата заезда:</label>
-              <div class="input-container">
-                <input type="text" name="arrival-date" id="arrival_date" value="24 апреля 2017">
-                <button class="calendar" type="button" aria-label="Кнопка для вызова календаря">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22">
-                    <path
-                      d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z" />
-                    <path
-                      d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z" />
-                  </svg>
-                </button>
-              </div>
-            </div>
-            <div class="line-container">
+              <input class="form-input big" type="text" name="arrival-date" id="arrival_date" value="24 апреля 2017">
+              <button class="calendar" type="button" aria-label="Кнопка для вызова календаря">
+                <svg xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22">
+                  <path
+                    d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z" />
+                  <path
+                    d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z" />
+                </svg>
+              </button>
+            </p>
+            <p class="form-line-container">
               <label for="departure_date">Дата выезда:</label>
-              <div class="input-container">
-                <input type="text" name="departure-date" id="departure_date" value="4 июля 2017">
-                <button class="calendar" type="button" aria-label="Кнопка для вызова календаря">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22">
-                    <path
-                      d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z" />
-                    <path
-                      d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z" />
-                  </svg>
-                </button>
-              </div>
-            </div>
-            <div class="line-container persons">
-              <div class="counter-container">
+              <input class="form-input big" type="text" name="departure-date" id="departure_date" value="4 июля 2017">
+              <button class="calendar" type="button" aria-label="Кнопка для вызова календаря">
+                <svg xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22">
+                  <path
+                    d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z" />
+                  <path
+                    d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z" />
+                </svg>
+              </button>
+            </p>
+            <p class="form-line-container person-counter">
+              <span class="person-counter-container adults-counter">
                 <label for="adult-count">Взрослые:</label>
-                <div class="input-container">
-                  <button type="button" class="less">–</button>
-                  <input class="input-small" type="text" name="adult-count" id="adult-count" value="2">
-                  <button type="button" class="more">+</button>
-                </div>
-              </div>
-              <div class="counter-container">
+                <button type="button" class="btn-less">–</button>
+                <input class="form-input small" type="text" name="adult-count" id="adult-count" value="2">
+                <button type="button" class="btn-more">+</button>                
+              </span>
+              <span class="person-counter-container children-counter">
                 <label for="child-count">Дети:</label>
-                <div class="input-container">
-                  <button type="button" class="less">–</button>
-                  <input  class="input-small" type="text" name="child-count" id="child-count" value="0">
-                  <button type="button" class="more">+</button>
-                </div>
-              </div>
-            </div>
+                <button type="button" class="btn-less">–</button>
+                <input  class="form-input small" type="text" name="child-count" id="child-count" value="0">
+                <button type="button" class="btn-more">+</button>                
+              </span>
+            </p>
             <button class="form-search-btn btn-blue" type="submit">Найти</button>
           </form>
         </section>
