Правки второй страницы + псевдоэлементы

--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@
             </li>
             <li class="not-numbered">
               <ul class="not-numbered-list">
-                <li>
-                  <h3 class="life">Жильё</h3>
+                <li class="life">
+                  <h3>Жильё</h3>
                   <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
                 </li>
-                <li>
-                  <h3 class="food">Еда</h3>
+                <li class="food">
+                  <h3>Еда</h3>
                   <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
                 </li>
-                <li>
-                  <h3 class="souvenirs">Сувениры</h3>
+                <li class="souvenirs">
+                  <h3>Сувениры</h3>
                   <p>Не только китайского, но и местного производства!</p>
                 </li>
               </ul>
