--- a/hotels.html
+++ b/hotels.html
@@ -121,7 +121,7 @@
 					<h2 class="visually-hidden">Список гостиниц</h2>
 					<ul class="hotel-list">
 						<li class="hotel-list-item">
-							<img class="hotel-photo" src="img/hotel-picture-amara.jpg" alt="Фото гостиницы" width="135" height="90">
+							<img class="hotel-photo" src="img/hotel-picture-amara.jpg" alt="Фото Amara Resort & SPA" width="135" height="90">
 							<div class="hotel-main">
 								<h3><a class="hotel-link" href="#">Amara Resort & SPA</a></h3>
 								<p>Гостиница <span class="price">от 4000 р.</span></p>
@@ -131,17 +131,17 @@
 								</div>
 							</div>
 							<div class="hotel-rating">
-								<span class="hotel-stars">4 звезды
-									<img src="img/star.svg" alt="Звездочка" width="18" height="17">
-									<img src="img/star.svg" alt="Звездочка" width="18" height="17">
-									<img src="img/star.svg" alt="Звездочка" width="18" height="17">
-									<img src="img/star.svg" alt="Звездочка" width="18" height="17">
-								</span>
+								<p class="hotel-stars">4 звезды
+									<img src="img/star.svg" alt="Звезда рейтинга" width="18" height="17">
+									<img src="img/star.svg" alt="Звезда рейтинга" width="18" height="17">
+									<img src="img/star.svg" alt="Звезда рейтинга" width="18" height="17">
+									<img src="img/star.svg" alt="Звезда рейтинга" width="18" height="17">
+								</p>
 								<span class="hotel-score">Рейтинг: 8,5</span>
 							</div>	
 						</li>
 						<li class="hotel-list-item">
-							<img class="hotel-photo" src="img/hotel-picture-desert.jpg" alt="Фото гостиницы" width="135" height="90">
+							<img class="hotel-photo" src="img/hotel-picture-desert.jpg" alt="Фото Desert Quail Inn" width="135" height="90">
 							<div class="hotel-main">
 								<h3><a class="hotel-link" href="#">Desert Quail Inn</a></h3>
 								<p>Мотель <span class="price">от 3000 р.</span></p>
@@ -151,16 +151,16 @@
 								</div>
 							</div>
 							<div class="hotel-rating">
-								<span class="hotel-stars">3 звезды
-									<img src="img/star.svg" alt="Звездочка" width="18" height="17">
-									<img src="img/star.svg" alt="Звездочка" width="18" height="17">
-									<img src="img/star.svg" alt="Звездочка" width="18" height="17">
-								</span>
+								<p class="hotel-stars">3 звезды
+									<img src="img/star.svg" alt="Звезда рейтинга" width="18" height="17">
+									<img src="img/star.svg" alt="Звезда рейтинга" width="18" height="17">
+									<img src="img/star.svg" alt="Звезда рейтинга" width="18" height="17">
+								</p>
 								<span class="hotel-score">Рейтинг: 8,9</span>
 							</div>
 						</li>
 						<li class="hotel-list-item">
-							<img class="hotel-photo" src="img/hotel-picture-villas.jpg" alt="Фото гостиницы" width="135" height="90">
+							<img class="hotel-photo" src="img/hotel-picture-villas.jpg" alt="Фото Villas at Poco Diablo" width="135" height="90">
 							<div class="hotel-main">
 								<h3><a class="hotel-link" href="#">Villas at Poco Diablo</a></h3>
 								<p>Апартаменты <span class="price">от 2000 р.</span></p>
@@ -170,10 +170,10 @@
 								</div>
 							</div>
 							<div class="hotel-rating">
-								<span class="hotel-stars">2 звезды
-									<img src="img/star.svg" alt="Звездочка" width="18" height="17">
-									<img src="img/star.svg" alt="Звездочка" width="18" height="17">
-								</span>
+								<p class="hotel-stars">2 звезды
+									<img src="img/star.svg" alt="Звезда рейтинга" width="18" height="17">
+									<img src="img/star.svg" alt="Звезда рейтинга" width="18" height="17">
+								</p>
 								<span class="hotel-score">Рейтинг: 9,2</span>
 							</div>
 						</li>	
