Правки по комментариям проверяющего

--- a/hotels.html
+++ b/hotels.html
@@ -16,10 +16,10 @@
 				<nav class="main-nav">
 					<a class="header-logo" href="index.html" title="На главную"><img class="logo" src="img/logo-sedona.svg" alt="Логотип" width="140" height="71"></a>
 					<ul class="main-menu-list">
-						<li class="main-menu-item"><a href="#">Информация</a></li>
-						<li class="main-menu-item"><a href="#">Фото и видео</a></li>
-						<li class="main-menu-item"><a href="#">Карта штата</a></li>
-						<li class="main-menu-item"><a href="hotels.html">Гостиницы</a></li>
+						<li class="main-menu-item left"><a href="#">Информация</a></li>
+						<li class="main-menu-item left"><a href="#">Фото и видео</a></li>
+						<li class="main-menu-item right"><a href="#">Карта штата</a></li>
+						<li class="main-menu-item right"><a class="current" href="hotels.html">Гостиницы</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -106,12 +106,12 @@
 							</ul>
 						</div>
 						<div class="sort-up-down">
-							<a href="#" class="sort-btn">
+							<a href="#" class="sort-btn" aria-label="Сортировка по возрастанию">
 								<svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
 									<path fill="#231F20" d="M5.5 0L0 10h11z"/>
 								</svg>
 							</a>
-							<a href="#" class="sort-btn active">
+							<a href="#" class="sort-btn active" aria-label="Сортировка по убыванию">
 								<svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
 									<path fill="#231F20" d="M5.5 10L0 0h11"/>
 								</svg>
