--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <nav class="main-nav">
           <a class="header-logo"><img class="logo" src="img/logo-sedona.svg" alt="Логотип" width="140" height="71"></a>
           <ul class="main-menu-list">
-            <li class="main-menu-item"><a href="#">Информация</a></li>
-            <li class="main-menu-item"><a href="#">Фото и видео</a></li>
-            <li class="main-menu-item"><a href="#">Карта штата</a></li>
-            <li class="main-menu-item"><a href="hotels.html">Гостиницы</a></li>
+            <li class="main-menu-item left"><a href="#">Информация</a></li>
+            <li class="main-menu-item left"><a href="#">Фото и видео</a></li>
+            <li class="main-menu-item right"><a href="#">Карта штата</a></li>
+            <li class="main-menu-item right"><a href="hotels.html">Гостиницы</a></li>
           </ul>
         </nav>
       </header>
