--- a/index.html
+++ b/index.html
@@ -144,6 +144,12 @@
 
         <!-- Блок с картой -->
         <div class="map">
+          <iframe 
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12358.684988128782!2d-111.76654188673173!3d34.87148950641973!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1571989826538!5m2!1sru!2sru" 
+            width="1200" 
+            height="593" 
+            frameborder="0" style="border:0;" allowfullscreen="">
+          </iframe>
           <img src="img/map.jpg" alt="Седона на карте" width="1200" height="593">
         </div>
 
@@ -199,6 +205,9 @@
 
     </div>
     
+    <script src="js/search-form-hide.js"></script>
+    <script src="js/search-form-toggle.js"></script>
+
   </body>
 
 </html>
