--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
         </section>
 
         <!-- Блок поиска гостиницы -->
-        <section class="hotel-search">
-          <hotel-form-text-block>
+        <section class="hotel-search"> 
+          <div class="hotel-form-text-block"> <!-- Обертка для анимации выезда формы -->
             <h2 class="visually-hidden">Выбор гостиницы</h2>
             <b class="hotel-search-b">Заинтересовались?</b>
             <p class="hotel-search-p">Укажите предполагаемые даты поездки,
                 и мы покажем вам лучшие предложения гостиниц в Седоне</p>
             <button type="button" class="htl-search-btn btn-brown">Поиск гостиницы в Седоне</button>
-          </hotel-form-text-block>
+            </div>
         
           <!-- Попап форма -->
           <form class="hotel-form" action="https://echo.htmlacademy.ru" method="POST">
