Скрипт проверки формы

--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
     
     <script src="js/search-form-hide.js"></script>
     <script src="js/search-form-toggle.js"></script>
+    <script src="js/form-send-check.js"></script>
 
   </body>
 
