--- a/index.html
+++ b/index.html
@@ -207,10 +207,8 @@
 
     </div>
     
-    <script src="js/search-form-hide.js"></script>
-    <script src="js/search-form-toggle.js"></script>
-    <script src="js/form-send-check.js"></script>
-
+    <script src="js/index-search-form.js"></script>
+    
   </body>
 
 </html>
