Правки и анимация ошибки

--- a/hotels.html
+++ b/hotels.html
@@ -217,7 +217,7 @@
 					</li>
 				</ul>
 				<p class="copyright">
-					<span>Website by</span>
+					Website by
 					<a class="copyright-logo" href="https://htmlacademy.ru/intensive/htmlcss"
 						title="Интенсив HTML и CSS, уровень 1">
 						<svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="115" height="41"
