--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <b class="hotel-search-b">Заинтересовались?</b>
             <p class="hotel-search-p">Укажите предполагаемые даты поездки,
                 и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-            <button type="button" class="htl-search-btn btn-brown">Поиск гостиницы в Седоне</button>
+            <a href="hotels.html" class="htl-search-btn btn-brown">Поиск гостиницы в Седоне</a>
             </div>
         
           <!-- Попап форма -->
@@ -150,7 +150,7 @@
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12358.684988128782!2d-111.76654188673173!3d34.87148950641973!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1571989826538!5m2!1sru!2sru" 
             width="1200" 
             height="593" 
-            frameborder="0" style="border:0;" allowfullscreen="">
+            style="border:0;" allowfullscreen="">
           </iframe>
           <img src="img/map.jpg" alt="Седона на карте" width="1200" height="593">
         </div>
@@ -191,7 +191,7 @@
           </li>
         </ul>
         <p class="copyright">
-          <span>Website by</span>
+          Website by
           <a class="copyright-logo" href="https://htmlacademy.ru/intensive/htmlcss"
             title="Интенсив HTML и CSS, уровень 1">
             <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="115" height="41"
